@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
-<cd:ProductClass xmlns:cd="http://www.stcorp.nl/coda/definition/2008/07" name="CLOUDNET" last-modified="2017-06-20">
+<cd:ProductClass xmlns:cd="http://www.stcorp.nl/coda/definition/2008/07" name="CLOUDNET" last-modified="2021-06-16">
   <cd:Description>Cloudnet products</cd:Description>
   <cd:ProductType name="classification">
     <cd:Description>Level 2a target classification and cloud boundaries</cd:Description>
-    <cd:ProductDefinition id="classification" format="netcdf" version="0">
-      <cd:Description>The format definition for this product is taken from the netcdf file itself.</cd:Description>
+    <cd:ProductDefinition id="classification" format="hdf5" version="0">
+      <cd:Description>The format definition for this product is taken from the netcdf4 file itself.</cd:Description>
       <cd:DetectionRule>
         <cd:MatchExpression>regex("[0-9]{8}_.*_classification\\.nc", filename())</cd:MatchExpression>
       </cd:DetectionRule>
