@@ -1,3 +1,3 @@
 <?xml version="1.0"?>
-<cd:ProductDefinition xmlns:cd="http://www.stcorp.nl/coda/definition/2008/07" id="classification" format="netcdf" last-modified="2017-06-20">
+<cd:ProductDefinition xmlns:cd="http://www.stcorp.nl/coda/definition/2008/07" id="classification" format="hdf5" last-modified="2021-06-16">
 </cd:ProductDefinition>
