@@ -297,11 +297,11 @@
 </tr>
 <tr class="row-even"><td><p><strong>cloud_base_height</strong></p></td>
 <td><p><em>path</em></p></td>
-<td><p><strong>/cloud_base_height</strong></p></td>
+<td><p><strong>/cloud_base_height_amsl</strong></p></td>
 </tr>
 <tr class="row-odd"><td><p><strong>cloud_top_height</strong></p></td>
 <td><p><em>path</em></p></td>
-<td><p><strong>/cloud_top_height</strong></p></td>
+<td><p><strong>/cloud_top_height_amsl</strong></p></td>
 </tr>
 </tbody>
 </table>
