@@ -1,6 +1,7 @@
 * Updates to product ingestions:
   - AEOLUS L1B: fixed ingestion of Mie/measurement data; added sensor angles
   - AEOLUS L2B: fixed ingestion of Mie data; added sensor angles
+  - CLOUDNET L2 classification: add support for new (netcdf4) format
   - ECMWF GRIB: fixed unit of backscatter coefficient 1/(milli sr) -> 1/(m sr)
   - GEOMS UVVIS.DOAS: allow template V007 files to be stored in hdf5 format
   - GHG CCI: added support for TROPOMI WFMD L2
